codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__feedback_selection_popup.snap
---
source: tui/src/chatwidget/tests/popups_and_settings.rs
expression: popup
---
  这 次 体 验 如 何 ？

› 1. 错 误       崩 溃 、 错 误 消 息 、 卡 死 或 界 面 /行 为 异 常 。
  2. 结 果 不 佳   输 出 偏 离 目 标 、 不 正 确 、 不 完 整 或 没 有 帮 助 。
  3. 结 果 很 好   结 果 有 帮 助 、 正 确 、 高 质 量 ， 或 带 来 了 令 人 愉 悦 的 体 验 。
  4. 安 全 检 查   正 常 使 用 因 安 全 检 查 或 拒 绝 而 受 阻 。
  5. 其 他       速 度 问 题 、 功 能 建 议 、 体 验 反 馈 或 其 他 内 容 。

  按  enter 确 认 ， 或 按  esc 返 回
