codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__goal_menu_budget_limited.snap
---
source: tui/src/chatwidget/tests/goal_menu.rs
expression: rendered_goal_summary(&mut rx)
---
目标
状态：受预算限制
内容：Keep improving the bare goal command until it feels calm and useful.
已用时间：1m
已用 Token：12.5K
Token 预算：80K

命令：/goal edit、/goal clear
